<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    android:id="@+id/lin_aa"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_horizontal"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:descendantFocusability="blocksDescendants"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_marginRight="23dp"
            android:src="@drawable/popup_anchor"
            android:visibility="visible" />

        <LinearLayout
            android:id="@+id/lin_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:background="@drawable/bg_white"
            android:orientation="vertical"
            android:paddingBottom="10dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/learn_display"
                android:textColor="@color/deep_grey"
                android:textSize="@dimen/text_s12" />

            <RadioGroup
                android:id="@+id/rg_display"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_grey_corner_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp" >

                <RadioButton
                    android:id="@+id/rb_CN_EG"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_radio_selector_left1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/learn_CN_EG"
                    android:textColor="@drawable/text_style_grey_to_white"
                    android:textSize="@dimen/text_s10" />

                <RadioButton
                    android:id="@+id/rb_CN_aa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_radio_selector_left1"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/learn_CN_aa"
                    android:textColor="@drawable/text_style_grey_to_white"
                    android:textSize="@dimen/text_s10" />

                <RadioButton
                    android:id="@+id/rb_EN_aa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_radio_selector_right1"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/learn_EN_aa"
                    android:textColor="@drawable/text_style_grey_to_white"
                    android:textSize="@dimen/text_s10" />
            </RadioGroup>

            <View
                android:layout_width="match_parent"
                android:layout_height="1.0dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="10dp"
                android:background="@color/mid_grey" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:text="@string/learn_font_size"
                android:textColor="@color/deep_grey"
                android:textSize="@dimen/text_s12" />

            <RadioGroup
                android:id="@+id/rg_font"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="5dp"
                android:background="@drawable/shape_grey_corner_bg"
                android:gravity="center"
                android:orientation="horizontal"
                android:padding="2dp" >

                <RadioButton
                    android:id="@+id/rb_Small"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_radio_selector_left1"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/learn_small"
                    android:textColor="@drawable/text_style_grey_to_white"
                    android:textSize="@dimen/text_s10" />

                <RadioButton
                    android:id="@+id/rb_Medium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_radio_selector_left1"
                    android:button="@null"
                    android:checked="true"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/learn_medium"
                    android:textColor="@drawable/text_style_grey_to_white"
                    android:textSize="@dimen/text_s10" />

                <RadioButton
                    android:id="@+id/rb_Large"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/btn_radio_selector_right1"
                    android:button="@null"
                    android:gravity="center"
                    android:padding="8dp"
                    android:text="@string/learn_large"
                    android:textColor="@drawable/text_style_grey_to_white"
                    android:textSize="@dimen/text_s10" />
            </RadioGroup>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>