
    <ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:background="@color/chinese_skill_blue"
        android:gravity="center_horizontal"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="10dip"
            android:paddingLeft="10dp"
            android:paddingRight="10dp" >

            <ImageView
                android:id="@+id/iv_close"
                android:layout_width="30dp"
                android:layout_height="wrap_content"
                android:layout_gravity="left"
                android:layout_marginTop="15dp"
                android:layout_marginLeft="5dip"
                android:src="@drawable/closeicon" />

            <ImageView
                android:id="@+id/iv_portrait"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="30dp"
                android:layout_marginTop="30dp"
                android:src="@drawable/login_appicon" />

            <TextView
                android:id="@+id/tv_username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@null"
                android:padding="5dip"
                android:text="@string/tabme_login_email"
                android:textColor="@color/floralwhite"
                android:textSize="14sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/txt_username"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:hint="@string/tabme_login_email"
                android:imeOptions="actionNext"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="@color/floralwhite"
                android:textColorHint="@color/floralwhite"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <View
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/min_grey" />

            <TextView
                android:id="@+id/tv_password"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:background="@null"
                android:padding="5dip"
                android:text="@string/tabme_login_password"
                android:textColor="@color/floralwhite"
                android:textSize="14sp"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/et_pwd"
                android:layout_width="match_parent"
                android:layout_height="50dip"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@null"
                android:drawableRight="@drawable/viewpassword"
                android:hint="@string/tabme_login_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:padding="5dip"
                android:singleLine="true"
                android:textColor="@color/floralwhite"
                android:textColorHint="@color/floralwhite"
                android:textCursorDrawable="@null"
                android:textSize="16sp" />

            <View
                android:id="@+id/line_password"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:background="@color/min_grey" />

            <TextView
                android:id="@+id/tv_noty_error"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="5dp"
                android:text="@string/tabme_login_password_desc"
                android:textColor="@color/red"
                android:textSize="14sp"
                android:visibility="invisible"
                />

            <LinearLayout
                android:id="@+id/layout_btn_login"
                android:layout_width="match_parent"
                android:layout_height="0dip"
                android:layout_marginLeft="10dip"
                android:layout_marginRight="10dip"
                android:layout_marginTop="20dip"
                android:layout_weight="1"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/btn_login"
                    android:layout_width="match_parent"
                    android:layout_height="40dip"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/shape_blue_corner_login_bg"
                    android:gravity="center"
                    android:padding="10dip"
                    android:singleLine="true"
                    android:text="@string/tabme_login_login"
                    android:textColor="@color/white"
                    android:textSize="@dimen/text_s15"
                    android:textStyle="bold" />
            </LinearLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp" >

                <TextView
                    android:id="@+id/btn_sign_up"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="10dp"
                    android:text="@string/tabme_login_sign_up_now"
                    android:textColor="@color/floralwhite"
                    android:textSize="@dimen/text_s15" />

                <TextView
                    android:id="@+id/btn_forgot_psw"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:gravity="right"
                    android:paddingTop="10dp"
                    android:text="@string/tabme_login_forgot_password"
                    android:textColor="@color/floralwhite"
                    android:textSize="@dimen/text_s15" />
            </RelativeLayout>
        </LinearLayout>
    </ScrollView>
