<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/view_title"
        layout="@layout/main_title_view" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0.0dp"
        android:layout_weight="1"
        android:orientation="vertical" >

        <FrameLayout
            android:id="@+id/container1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

        <FrameLayout
            android:id="@+id/container2"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/container3"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />

        <FrameLayout
            android:id="@+id/container4"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:visibility="gone" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/radioGroup"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/chinese_skill_bottom_bar_bg"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/main_nav_padding"
        android:paddingTop="@dimen/main_nav_padding" >
        
        <LinearLayout
            android:id="@+id/lin_2"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/home_rb_nav02"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/main_navi_one"
                android:focusable="false" />

            <TextView
                android:id="@+id/home_tv_nav02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/tab_discover"
                android:textColor="@drawable/rb_selector_textcolor"
                android:textSize="@dimen/text_s10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_0"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/home_rb_nav00"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/main_navi_two"
                android:focusable="false" />

            <TextView
                android:id="@+id/home_tv_nav00"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/tab_learn"
                android:textColor="@drawable/rb_selector_textcolor"
                android:textSize="@dimen/text_s10" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/lin_1"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/home_rb_nav01"
                android:layout_width="27dp"
                android:layout_height="25dp"
                android:background="@drawable/main_navi_complete"
                android:focusable="false" />

            <TextView
                android:id="@+id/home_tv_nav01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/tab_complete"
                android:textColor="@drawable/rb_selector_textcolor"
                android:textSize="@dimen/text_s10" />
        </LinearLayout>

        

        <LinearLayout
            android:id="@+id/lin_3"
            android:layout_width="0.0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical" >

            <Button
                android:id="@+id/home_rb_nav03"
                android:layout_width="25dp"
                android:layout_height="25dp"
                android:background="@drawable/main_navi_three"
                android:focusable="false" />

            <TextView
                android:id="@+id/home_tv_nav03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:focusable="false"
                android:text="@string/tab_me"
                android:textColor="@drawable/rb_selector_textcolor"
                android:textSize="@dimen/text_s10" />
        </LinearLayout>
    </LinearLayout>

</LinearLayout>